# Endstone_TianyanPlugin

./: README.md  README_eng.md  pyproject.toml
language/English/: lang.json
src/endstone_tianyan/: __init__.py  eng_lang.py  tianyan_plugin.py  ty_clean.py  zh_lang.py
