[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tianyan"
version = "1.1.1"
description = "一个可以记录和查询容器交互和其它交互行为、方块放置与破坏和生物受击记录的endstone插件"
authors = [
    { name = "yuhang", email = "keepsecret@nothing.mc" },
]
keywords = ["endstone", "plugin", "tianyan"]
[project.urls]
Homepage = "https://github.com/yuhangle/Endstone_TianyanPlugin"
[project.entry-points."endstone"]
tianyan = "endstone_tianyan:TianyanPlugin"