[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tianyan"
version = "1.1.3"
description = "一款可进行行为记录与查询、防刷屏、玩家封禁的endstone插件"
authors = [
    { name = "yuhang", email = "keepsecret@nothing.mc" },
]
readme = "README.md"
keywords = ["endstone", "plugin", "tianyan"]
[project.urls]
Homepage = "https://github.com/yuhangle/Endstone_TianyanPlugin"
[project.entry-points."endstone"]
tianyan = "endstone_tianyan:TianyanPlugin"